[project]
name = "dicomparser"
version = "0.1.0"
description = ""
authors = [
    {name = "bbearce",email = "bbearce@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "hvf-extraction-script (>=0.0.4,<0.0.5)",
    "matplotlib (>=3.10.1,<4.0.0)",
    "pymupdf (>=1.25.4,<2.0.0)",
    "oct-converter (>=0.6.0,<0.6.3)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
